# cgnsMeshCutter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  env.sh  test_comparison.sh  test_perf.sh
src/: CMakeLists.txt  cartesianCutter.cpp  cartesianCutter.h  cgFile.cpp  cgFile.h  cmdLine.cpp  format.h  meshCutter.cpp  meshCutter.h  metisCutter.cpp  metisCutter.h  mpiAdapter.cpp  mpiAdapter.h  parmetisCutter.cpp  parmetisCutter.h  scalar.h  stringUtil.cpp  stringUtil.h  timeStat.cpp  timeStat.h  vec.cpp  vec.h
src/cgio/: CGEnums.h  CGError.cpp  CGError.h  CGFile.cpp  CGFile.h  CGIONode.cpp  CGIONode.h  CGNSBase.cpp  CGNSBase.h  CGNSDataBase.h  CGNSNode.cpp  CGNSNode.h  CMakeLists.txt  Section.cpp  Section.h  Zone.cpp  Zone.h
test/: CMakeLists.txt  box.cgns  cmdLine.cpp  cmdLine.h  main.cpp  performance_report.md  performance_results.txt  pipe.cgns  pipe.yaml  run_perf_test.sh
utilities/: actMonitor  cgnsADF2HDF.sh  formatMixElementConnectivity.sh  memoryInfo.sh
